Version 1rc1 - released 2012-08-21
cmb     added czech translation (contributed by oldnema)
cmb     made minor changes

Version 1beta1 - released 2012-04-01
cmb	cleaned up code
cmb	implemented search.php that will search co-contents as well
cmb	implemented backup of co-contents on logout
cmb	implemented auto-detection of available co-contents
cmb	implemented co-content adminstration (delete co-contents only for now)
cmb	added slovak translation (contributed by Tata)
cmb	updated manual
cmb	added German manual
cmb	added German translation
cmb	made lastupdate recognize changes in co-contents

Version 1alpha2 - released 2012-02-27
cmb	changed plugin's name to Coco_XH
cmb	fixed faulty code examples in manual (reported by snafu and Gert)
cmb	changed: save button is only shown, if no editor is available
cmb	documented possibility to use scripting
cmb	fixed bug: multiple editors didn't work independently (reported by Gert)
cmb	added $height parameter to also() (suggested by Gert); updated manual accordingly
cmb	removed necessity to insert function call to template to enable editing
cmb	updated manual accordingly
cmb	added screenshots
cmb	cleaned up some code

Version 1alpha1 - released 2012-02-17
cmb	initial release